<resources>
    <string name="app_name">Experience Auroville</string>
    <string name="events">Events</string>
    <string name="events_today">Today\'s Events</string>
    <string name="events_one_week">Events This Week</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="feedback">Please enter your feedback ...</string>
    <string name="title_activity_map">Map</string>
    <string name="unable_to_get_location_list">Unable to get the list of locations.</string>
    <string name="auroville">Auroville</string>
    <string name="search_input_hint">Search locations by name or topic</string>
    <string name="search_remove_button_txt">Clear</string>
    <string name="search_current_events">Search by topic, location or event name</string>
    <string name="from">  From</string>
    <string name="to">  To</string>
    <string name="invalid_calendar_filter">Date range must be selected.</string>
    <string name="network_error">Network error : Please make sure you have Internet connectivity.</string>
    <string name="phone_hint">Your Phone Number</string>
    <string name="register_button">Register</string>
    <string name="register_for_events">Register For Events</string>
    <string name="empty_phone_no">Phone Number cannot be empty</string>
    <string name="less_digits_phone_no">Phone Number should have 10 digits.</string>
    <string name="no_events_scheduled">There are no events scheduled for this period.</string>
    <string name="places">Places</string>
    <string name="menu_feedback">Feedback</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="to_exploreavteam">To: The Experience Auroville Team</string>
    <string name="feedback_successful">Thanks for your feedback.</string>
    <string name="enter_feedback">Please enter your feedback</string>
    <string name="ads_turned_off">Thank you. Your ads have been turned off.</string>
    <string name="ad_unit_id">ca-app-pub-1181736027907915/4203468895</string>
    <string name="title_activity_location_detail">Location Details</string>
    <string name="title_activity_event_detail">Event Details</string>
    <string name="click_here_for_details">Click here for more details...</string>
    <string name="click_on_event_for_details">Click on any event to see event details...</string>
    <string name="to_date_before_from_date">The To Date must be later than the From Date.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="settings">Settings</string>
    <string name="guest_access">Guest Access</string>
    <string name="guest_name">Guest Name</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="valid_from">Valid From</string>
    <string name="date">Date</string>
    <string name="valid_till">Valid Till</string>
    <string name="staying_at">Staying At</string>
    <string name="guest_details">Guest Details</string>
    <string name="guest_name_missing">Guest name must be specified.</string>
    <string name="guest_phone_missing">Guest phone must be specified.</string>
    <string name="guest_location_missing">Guest location must be specified.</string>
    <string name="from_date_missing">Valid From date must be specified.</string>
    <string name="to_date_missing">Valid Till date must be specified.</string>
    <string name="guest_info_saved">Guest information has been saved.</string>
    <string name="unable_to_save_guest_info">Failed to save guest information.</string>
    <string name="menu_add">Add</string>
</resources>
