<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:background="@color/windowBackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/guest_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:textSize="12dp"
            android:textColor="@color/colorPrimaryText"
            />

        <TextView
            android:id="@+id/name_tv2"
            android:text="@string/guest_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="12dp"
            />

        <EditText
            android:id="@+id/guest_phone_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:textSize="12dp"
            android:textColor="@color/colorPrimaryText"
            />

        <TextView
            android:id="@+id/phone_tv2"
            android:text="@string/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="12dp"
            />

        <EditText
            android:id="@+id/guest_location_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:textSize="12dp"
            android:textColor="@color/colorPrimaryText"
            />

        <TextView
            android:id="@+id/location_tv2"
            android:text="@string/staying_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="12dp"
            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            >

            <TextView
                android:id="@+id/valid_from_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/valid_from"
                android:layout_gravity="left"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:textSize="12dp"
                />

            <EditText
                android:id="@+id/guest_from_date_et"
                android:layout_toRightOf="@+id/valid_from_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="12dp"
                android:hint="@string/date"
                android:drawableLeft="@drawable/ic_date_range_black_18dp"
                android:focusableInTouchMode="false"
                android:singleLine="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            >

            <TextView
                android:id="@+id/valid_till_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/valid_till"
                android:layout_gravity="left"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:textSize="12dp"
                />

            <EditText
                android:id="@+id/guest_to_date_et"
                android:layout_toRightOf="@+id/valid_till_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="12dp"
                android:hint="@string/date"
                android:drawableLeft="@drawable/ic_date_range_black_18dp"
                android:focusableInTouchMode="false"
                android:singleLine="true" />

        </RelativeLayout>

        <TextView
            android:id="@+id/feedback_filler"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


        <ImageButton
            android:id="@+id/save_btn"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/done_green_36dp" />

    </LinearLayout>


</ScrollView>
