<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/windowBackground"
    tools:context="com.navare.prashant.exploreauroville.CurrentEventsActivity">

    <EditText
        android:id="@+id/search_events"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_current_events">

        <requestFocus />
    </EditText>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/datepicker_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_below="@+id/search_events"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="4dp"
            android:gravity="left"
            android:textSize="16dp"
            android:id="@+id/event_date_from"
            android:hint="@string/from"
            android:drawableLeft="@drawable/ic_date_range_black_18dp"
            android:focusableInTouchMode="false"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:gravity="left"
            android:textSize="16dp"
            android:id="@+id/event_date_to"
            android:hint="@string/to"
            android:drawableLeft="@drawable/ic_date_range_black_18dp"
            android:focusableInTouchMode="false"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/dateFilterBtn"
            android:layout_marginLeft="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_filter_list_black_24dp" />

    </LinearLayout>

    <ListView
        android:id="@+id/listview_events"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/datepicker_ll"
        android:divider="@null"
        />

</RelativeLayout>
